# netrine

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE  README.md  index.js  netrine.ts  nitrine.ts  package-lock.json  package.json  project.clj  rustfmt.toml  tsconfig.json
app/: .gitignore  index.html  netrine.wasm  package-lock.json  package.json
app/src/: App.css  App.jsx
app/wasm/: wasm.js  wasm.wasm
cli/: Cargo.toml
cli/src/: cmd.rs  main.rs
cli/tests/: e2e.rs
compiler/: Cargo.toml
compiler/src/: collections.rs  compiler.rs  config.rs  error.rs  eval.rs  hir.rs  index_map.rs  interner.rs  lexer.rs  lib.rs  macros.rs  mir.rs  parser.rs  pprint.rs  resolver.rs  semantics.rs  source.rs  state.rs  syntax.rs  (+4 more)
examples/: life.nne  misc.nne
lib/: Base.js  Base.ne  core.js
netrine/: Cargo.toml
samples/: factorial.ne  factorial.nne  fibonacci.ne  fibonacci.nne  fizzbuzz.ne  fizzbuzz.nne  greet.nne  hello.ne  hello.nne  html.ne  html.nne  macro.ne  mandelbrot.nne  patterns.nne  quicksort.nne  sort.nne
scripts/: build.sh
src/: analysis.js  analysis.ts  arena.rs  ast.js  ast.rs  compiler.js  compiler.ts  desugar.ts  error.rs  hir.js  hir.rs  infer.rs  ir.rs  lexer.js  lexer.rs  lexer.ts  lib.rs  lower.rs  main.rs  mir.rs  netrine.js  netrine.ts  node.rs  parser.js  parser.rs  parser.ts  pprint.js  resolve.rs  source.rs  span.rs  state.rs  syntax.rs  syntax.ts  token.js  token.rs  token.ts  types.rs  wasm.rs
test/: lexer.spec.js  lexer.spec.ts  lexer_test.cljc  parser.spec.js  parser.spec.ts  utils.js  utils.ts
tests/: e2e.rs
wasm/: Cargo.toml
(+106 files in other folders)
