[package]
authors = ["Luiz Lopes <luizlopesdev@gmail.com>"]
description = "A minimalist programming language"
edition = "2018"
license = "MIT"
version = "0.1.0"
name = "netrine"

[dependencies]
netrine_core = { version = "0.1.0", path="./crates/netrine_core" }
netrine_syntax = { version = "0.1.0", path="./crates/netrine_syntax" }
