[workspace]
members = ["netrine", "compiler", "wasm"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.0.1"
rust-version = "1.88"

[profile.test]
debug = true

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
strip = true
panic = "abort"

[profile.release]
lto = true
strip = false
opt-level = 3